For horizontal - justify content

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
   border-width: 2px;
   /* Using display flex : side by side*/
   display: flex;
+  /* For horizontal - justify content */
+  justify-content: center;
 }
 
 .box{
