--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   /* Using display flex : side by side*/
   display: flex;
   /* For horizontal - justify content */
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .box{
