--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .container{
   width: 100%;
-  height: 300px;
+  height: 600px;
   border-style: solid;
   border-color: rgb(255, 1, 1);
   border-width: 2px;
@@ -13,7 +13,7 @@
   flex-direction: column;
   /* For horizontal - justify content */
   align-items: center;
-  
+  justify-content: center;
 }
 
 .box{
