--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   /* For horizontal - justify content */
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .box{
